@@ -4,3 +4,5 @@ such as `bdale/blog`, you cannot do
 references.
 
 The other pagespec functions should too, where appropriate.
+
+[[done]]
